# DPF

./: .gitignore  .gitmodules  .travis.yml  App_8hpp_source.html  Application_8hpp_source.html  Base64_8hpp_source.html  Base_8hpp_source.html  CMakeLists.txt  Cairo_8hpp_source.html  Color_8hpp_source.html  DistrhoDetails_8hpp_source.html  DistrhoInfo_8hpp_source.html  DistrhoPluginLV2_8hpp_source.html  DistrhoPluginUtils_8hpp_source.html  DistrhoPlugin_8hpp_source.html  DistrhoStandaloneUtils_8hpp_source.html  DistrhoUI_8hpp_source.html  DistrhoUtils_8hpp_source.html  EventHandlers_8hpp_source.html  ExternalWindow_8hpp_source.html  FEATURES.md  FileBrowserDialogImpl_8hpp_source.html  FileBrowserDialog_8hpp_source.html  Geometry_8hpp_source.html  ImageAboutWindow_8hpp_source.html  ImageBaseWidgets_8hpp_source.html  ImageBase_8hpp_source.html  ImageButton_8hpp_source.html  ImageKnob_8hpp_source.html  ImageSlider_8hpp_source.html  ImageSwitch_8hpp_source.html  ImageWidgets_8hpp_source.html  Image_8hpp_source.html  LICENSE  LICENSING.md  Layout_8hpp_source.html  LeakDetector_8hpp_source.html  LibraryUtils_8hpp_source.html  Makefile  Makefile.base.mk  (+366 more)
.github/workflows/: build.yml  cmake.yml  example-plugins.yml  irc.yml  makefile.yml
.travis/: before_install.sh  install.sh  script-linux.sh  script-macos.sh  script-win32.sh  script-win64.sh
cmake/: DPF-plugin.cmake  DPFFunctions.cmake  FindCairo.cmake  FindJack.cmake  FindLibLo.cmake  cxx_handling.cmake  version.cmake  version.h.in
dgl/: App.hpp  Application.hpp  Base.hpp  CMakeLists.txt  Cairo.hpp  CairoWidget.hpp  Color.hpp  EventHandlers.hpp  Events.hpp  FileBrowserDialog.hpp  Geometry.hpp  Image.hpp  ImageAboutWindow.hpp  ImageBase.hpp  ImageBaseWidgets.hpp  ImageButton.hpp  ImageKnob.hpp  ImageSlider.hpp  ImageSwitch.hpp  ImageWidgets.hpp  Layout.hpp  Makefile  Makefile.mk  NanoVG.hpp  NanoWidget.hpp  NanoWidgets.hpp  OpenGL-include.hpp  OpenGL.hpp  SVG.hpp  StandaloneWindow.hpp  SubWidget.hpp  TopLevelWidget.hpp  VstGuiWidget.hpp  Vulkan.hpp  WebView.hpp  Widget.hpp  Window.hpp
dgl/ntk/: NtkApp.hpp  NtkWidget.hpp  NtkWindow.hpp
dgl/src/: App.cpp  AppPrivateData.hpp  Application.cpp  ApplicationPrivateData.cpp  ApplicationPrivateData.hpp  ApplicationPrivateData_macOS.mm  Cairo.cpp  Color.cpp  Common.hpp  EventHandlers.cpp  Geometry.cpp  Image.cpp  ImageAboutWindow.cpp  ImageBase.cpp  ImageBaseWidgets.cpp  ImageButton.cpp  ImageKnob.cpp  ImageSlider.cpp  ImageSwitch.cpp  ImageWidgets.cpp  Layout.cpp  NanoVG.cpp  NanoWidget.cpp  NanoWidgets.cpp  OpenGL.cpp  OpenGL2.cpp  OpenGL3.cpp  SVG.cpp  StandaloneWindow.cpp  Stub.cpp  SubWidget.cpp  SubWidgetPrivateData.cpp  SubWidgetPrivateData.hpp  TopLevelWidget.cpp  TopLevelWidgetPrivateData.cpp  TopLevelWidgetPrivateData.hpp  VstGui.cpp  Vulkan.cpp  WebViewWin32.cpp  Widget.cpp  (+8 more)
dgl/src/freetype/: FreeTypeAmalgam.h  README.md
dgl/src/freetype-gl/: freetype-errors.h  opengl.h  texture-font.c
dgl/src/nanovg/: fontstash.h  nanovg.c  nanovg.h  nanovg_gl.h  stb_truetype.h
dgl/src/nanovg2/: nanovg.h
dgl/src/pugl/: COPYING.keycode  pugl.h  pugl_haiku.cpp  pugl_internal.h  pugl_osx.m  pugl_osx_extended.h  pugl_osx_extended.m  pugl_win.cpp  pugl_x11.c
dgl/src/pugl-custom/: pugl.h  pugl_haiku.cpp  pugl_osx.m  pugl_win.cpp  pugl_x11.c
dgl/src/pugl-extra/: extras.c  extras.h  haiku.cpp  haiku.h  haiku_gl.cpp  haiku_stub.cpp  mac.m  wasm.c  wasm.h  wasm_gl.c  win.c  x11.c
dgl/src/resources/: Resources.cpp  Resources.h
dgl/src/sofd/: libsofd.c  libsofd.h
distrho/: DistrhoDetails.hpp  DistrhoInfo.hpp  DistrhoPlugin.hpp  DistrhoPluginInfo.h.template  DistrhoPluginMain.cpp  DistrhoPluginUtils.hpp  DistrhoStandaloneUtils.hpp  DistrhoUI.hpp  DistrhoUIMain.cpp  DistrhoUI_macOS.mm  DistrhoUI_win32.cpp  DistrhoUtils.hpp
distrho/extra/: Base64.hpp  ChildProcess.hpp  ExternalWindow.hpp  FileBrowserDialog.cpp  FileBrowserDialog.hpp  FileBrowserDialogImpl.cpp  FileBrowserDialogImpl.hpp  Filesystem.hpp  LeakDetector.hpp  LibraryUtils.hpp  Mutex.hpp  RingBuffer.hpp  Runner.hpp  ScopedDenormalDisable.hpp  ScopedPointer.hpp  String.hpp  Thread.hpp  ValueSmoother.hpp  WebView.hpp  WebViewImpl.cpp  WebViewImpl.hpp  WebViewWin32.hpp  d_leakdetector.hpp  d_mutex.hpp  d_scopedpointer.hpp  d_string.hpp  d_thread.hpp
distrho/src/: DISTRHOUIVST3.cpp  DistrhoDefines.h  DistrhoPlugin.cpp  DistrhoPluginAU.cpp  DistrhoPluginAU.exp  DistrhoPluginAU.r  (+28 more)
examples/: Makefile  Makefile.mk  README  app.cpp  cairo.cpp  color.cpp  dgl-app.cpp  dgl-images.cpp  image.cpp  images.cpp  nekobi-ui.cpp  text.cpp
examples/EmbedExternalUI/: CMakeLists.txt  DistrhoPluginInfo.h  EmbedExternalExamplePlugin.cpp  EmbedExternalExampleUI.cpp  Makefile  NativeWindow.hpp  README.md
examples/Info/: CMakeLists.txt  DistrhoPluginInfo.h  InfoExamplePlugin.cpp  InfoExampleUI.cpp  Makefile  README.md  ResizeHandle.hpp  modgui.ttl
examples/Info/modgui/: icon-info.html  script-info.js  stylesheet-info.css  tilesf1.LICENSE
examples/Latency/: CMakeLists.txt  DistrhoPluginInfo.h  LatencyExamplePlugin.cpp  Makefile  README.md
lac/: 2014-small-talk.odp
lv2-ttl-generator/: GNUmakefile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+63 more)
tests/: Application.cpp  Circle.cpp  Color.cpp  Demo.cpp  FileBrowserDialog.cpp  Line.cpp  Makefile  NanoImage.cpp  NanoSubWidgets.cpp  Point.cpp  README.txt  Triangle.cpp  Window.cpp  tests.hpp
utils/: README-DPF-Windows.txt  au-services-restart.sh  emscripten.html.in  generate-ttl.bat  generate-ttl.sh  generate-vst-bundles.sh  install-plugins-symlinks.sh  pack-win-dlls.sh  package-osx-bundles.sh  png2c.py  png2rgba.py  res2c.py  state2json.cpp  valgrind-dpf.supp
(+389 files in other folders)
